--- a/style.css
+++ b/style.css
@@ -1,11 +1,29 @@
-body {
-	background-color: #666699;
+h1 {
+	color: #c9c9c9;
+	font: Arial, sans-serif;
+	font-size: 40px;
+	padding-left: 35px;
+}
+h2, h3, h4 {
+	color: #3498AA;
+	font: Arial, sans-serif;
+	margin-top: -25px;
+	padding-left: 50px;
 }
 
-h1 {
-	color: #cc6699;
+body {
+	background-color: #222;
+	font: 14px Arial, sans-serif;
 }
 
 p {
 	color: white;
+	font: 14px Arial, sans-serif;
+}
+
+table {
+	border-spacing: 10px;
+}
+tr {
+
 }
