--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ h2, h3, h4 {
 }
 
 body {
+	background-image: url("images/Stripe.png");
 	background-color: #222;
 	font: 14px Arial, sans-serif;
 }
@@ -22,6 +23,7 @@ p {
 }
 
 table, th {
+	background-color:#222;
 	border-spacing: 10px;
 	border: 1px solid #c9c9c9;
 }
