Testing a fix for bg

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h2, h3, h4 {
 }
 
 body {
-	background-image: url("images/Stripe.png");
+	background-image: url("images/stripe.png");
 	background-color: #222;
 	font: 14px Arial, sans-serif;
 }
