Added photo and some info

--- a/style.css
+++ b/style.css
@@ -39,6 +39,12 @@ li {
 }
 
 /* Classes */
+.photo {
+	width: 200px;
+	padding: 10px;
+	border: 1px solid #c9c9c9;
+}
+
 .gitlogo {
     color: #fff;
 		fill: currentColor;
