--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -48,6 +48,7 @@ h2 {
 
 h3 {
   color: #282828;
+  font-family: 'Courier Prime', monospace;
   font-size: 16px;
   line-height: 32px;
   letter-spacing: 6px;
@@ -56,11 +57,13 @@ h3 {
 
 h4 {
   color: #f0f0f0;
+  font-family: 'Courier Prime', monospace;
   font-size: 20px;
 }
 
 p {
   color: #f0f0f0;
+  font-family: 'Courier Prime', monospace;
   font-size: 16px;
   font-weight: normal;
   line-height: 25px;
