--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -9,7 +9,7 @@ http://www.tooplate.com/view/2087-kalay
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400');
 
 body {
-    background: #292841;
+    background: #557a94;
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -40,7 +40,7 @@ h1 {
 }
 
 h2 {
-  color: #f0f0f0;
+  color: #19181A;
   font-size: 35px;
   line-height: 52px;
   margin-top: 0px;
@@ -62,10 +62,10 @@ h4 {
 }
 
 p {
-  color: #f0f0f0;
+  color: #19181A;
   font-family: 'Courier Prime', monospace;
   font-size: 16px;
-  font-weight: normal;
+  font-weight: BOLD;
   line-height: 25px;
   letter-spacing: 0.2px;
 }
@@ -85,7 +85,7 @@ p {
 -----------------------------------------*/
 
 .section-btn {
-  background: #1c1b29;
+  background: #19181A;
   border: none;
   border-radius: 50px;
   color: #f0f0f0;
@@ -151,12 +151,12 @@ a:hover, a:active, a:focus {
 #service, #about, #work,
 #contact, footer {
   position: relative;
-  padding-top: 60px;
+  padding-top: 20px;
   padding-bottom: 0px;
 }
 
 #service, #work {
-  background: #292841;
+  background: #19181A;
   text-align: center;
 }
 
@@ -239,10 +239,10 @@ a:hover, a:active, a:focus {
 -----------------------------------------*/
 
 .service-thumb {
-  background: #1c1b29;
+  background: #557A95;
   border-radius: 5px;
   padding: 42px 22px;
-  cursor: crosshair;
+  cursor: default;
   position: relative;
   top: 0;
   -webkit-transition: all ease-in-out 0.4s;
@@ -250,7 +250,7 @@ a:hover, a:active, a:focus {
 }
 
 .service-thumb:hover {
-  background: #7682cc;
+  background: #395569;
   top: -5px;
 }
 
@@ -264,7 +264,7 @@ a:hover, a:active, a:focus {
 }
 
 .service-thumb .fa {
-  color: #7682cc;
+  color: #19181a;
   font-size: 62px;
   text-align: center;
   margin-top: 32px;
@@ -291,7 +291,7 @@ a:hover, a:active, a:focus {
 }
 
 .about-image-thumb .social-icon li a {
-  background: #f0f0f0;
+  background: #19181A;
 }
 
 .about-thumb {
@@ -326,9 +326,9 @@ a:hover, a:active, a:focus {
 
 .work-thumb-overlay {
   position: absolute;
-  background: #1c1b29;
+  background: #557A95;
   border-radius: 5px;
-  cursor: crosshair;
+  cursor: pointer;
   opacity: 0;
   width: 100%;
   height: 100%;
@@ -338,7 +338,7 @@ a:hover, a:active, a:focus {
 }
 
 .work-thumb:hover .work-thumb-overlay {
-  opacity: 1;
+  opacity: 0.85;
 }
 
 
@@ -392,7 +392,7 @@ a:hover, a:active, a:focus {
 -----------------------------------------*/
 
 footer {
-  background: #1c1b29;
+  background: #19181A;
   text-align: center;
   padding: 120px 0;
 }
@@ -438,8 +438,8 @@ footer p {
 }
 
 .social-icon li a:hover {
-  background: #000000;
-  color: #ffffff;
+  background: #ffffff;
+  color: #19181A;
   transform: scale(1.1);
   top: -5px;
 }
