--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -341,6 +341,11 @@ a:hover, a:active, a:focus {
   opacity: 0.85;
 }
 
+.fill {
+  width: 100%;
+  height: 100%;
+}
+
 
 
 /*---------------------------------------
